--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="navigation_shake">Shake</string>
 
     <string name="more">More</string>
+    <string name="login">Login</string>
 </resources>
