--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
 
     <string name="more">More</string>
     <string name="login">Login</string>
+    <string name="search_hint">Search...</string>
 </resources>
