--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
     <!--event-->
     <string name="no_location">Haven\'t set location yet.</string>
     <string name="private_location">Location is only visible to members.</string>
+    <string name="no_host">Haven\'t set host yet.</string>
+    <string name="attendance">%1$s %2$s went</string>
 
     <!--Profile-->
     <string name="interests">Interests</string>
